; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vmware/vmci/extr_vmci_datagram.c_vmci_datagram_send.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vmware/vmci/extr_vmci_datagram.c_vmci_datagram_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmci_datagram = type { i32 }

@VMCI_ERROR_INVALID_ARGS = common dso_local global i32 0, align 4
@VMCI_INVALID_ID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vmci_datagram_send(%struct.vmci_datagram* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vmci_datagram*, align 8
  store %struct.vmci_datagram* %0, %struct.vmci_datagram** %3, align 8
  %4 = load %struct.vmci_datagram*, %struct.vmci_datagram** %3, align 8
  %5 = icmp eq %struct.vmci_datagram* %4, null
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @VMCI_ERROR_INVALID_ARGS, align 4
  store i32 %7, i32* %2, align 4
  br label %12

8:                                                ; preds = %1
  %9 = load i32, i32* @VMCI_INVALID_ID, align 4
  %10 = load %struct.vmci_datagram*, %struct.vmci_datagram** %3, align 8
  %11 = call i32 @vmci_datagram_dispatch(i32 %9, %struct.vmci_datagram* %10)
  store i32 %11, i32* %2, align 4
  br label %12

12:                                               ; preds = %8, %6
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}

declare dso_local i32 @vmci_datagram_dispatch(i32, %struct.vmci_datagram*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
